--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/auth-helpers-react": "^0.4.2",
-    "next": "14.0.2",
+    "next": "^14.0.4-canary.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
