--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-spinners": "^0.13.8",
+    "remark-html": "^16.0.1",
     "stripe": "^14.5.0",
     "tailwind-merge": "^2.0.0",
     "uniqid": "^5.4.0",
