--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "spotify-clone",
   "version": "0.1.0",
+  "homepage": "https://charles-spotify-clone.github.io/react-gh-pages",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -40,6 +41,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
+    "gh-pages": "^6.1.1",
     "postcss": "^8",
     "supabase": "^1.112.0",
     "tailwindcss": "^3.3.0",
